repair new worker no shifts on department

--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -145,3 +145,11 @@ select{
     left: 1vw;
 }
 
+#rolesModule
+{
+    display:none;
+}
+#ShiftModule
+{
+    display: none;
+}
