--- a/public_html/app/style/style_RolesModule.css
+++ b/public_html/app/style/style_RolesModule.css
@@ -33,7 +33,7 @@
 {
     width: 100%;
     height: 100vh;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     font-size: 1vw;
